backend working in docker